plugins {
    id 'application'
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Google Cloud OAuth2 Authentication Library
    implementation 'com.google.auth:google-auth-library-oauth2-http:1.24.1'

    // JSON Parser (Gson)
    implementation 'com.google.code.gson:gson:2.10.1'

    // Testing
    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}

application {
    mainClass = 'org.example.InteractiveApp'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs = ['-nowarn']
    options.warnings = false
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += "-Dfile.encoding=UTF-8"
    standardInput = System.in
}